elastic-eck/elastic-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  to:
    kind: Service
    name: elasticsearch-sample-es-http
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
