elastic-eck/kibana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kibana
  namespace: elastic
spec:
  to:
    kind: Service
    name: kibana-sample-kb-http
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
